removed useless classes

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <img src="assets/cafe.jpg" alt="photo d'une tasse de café" width="400px" height="350px">
                         </a>
                     </div>
-                    <div class="descr-dte">
+                    <div>
                         <h3>Mr Coffee</h3>
                         <p>Design réalisé à partir d'une maquette dans le cadre d'une courte formation fullstack JS</p>
                         <p>Langages et technologies : vscode ; HTML ; CSS</p>
@@ -114,7 +114,7 @@
                             <img src="assets/biblio.jpg" alt="photo d'une bibliothèque" width="400px" height="350px">
                         </a>
                     </div>
-                    <div class="descr-dte">
+                    <div>
                         <h3>Bibliothèque</h3>
                         <p>Application de gestion d'une bibliothèque, réalisée dans le cadre de cours en java EE en autodidacte</p>
                         <p>Ce code me sert de sandbox lorsque j'apprends de nouvelles fonctionnalités en JavaEE - il n'est pas forcément abouti et ne sert pas forcément à évaluer la qualité de mon code.</p>
@@ -128,7 +128,7 @@
                             <img src="assets/CSS_icon.svg" alt="logo CSS" width="400px" height="350px">
                         </a>
                     </div>
-                    <div class="descr-dte">
+                    <div>
                         <h3>Mes projets HTML et CSS</h3>
                         <p>Portfolio réalisé pour l'école la Plateforme à Marseille</p>
                         <p>Langages et technologies : vscode ; HTML ; CSS</p>
@@ -141,7 +141,7 @@
                             <img src="assets/travel.jpg" alt="photo d'une plage au coucher du soleil" width="400px" height="350px">
                         </a>
                     </div>
-                    <div class="descr-dte">
+                    <div>
                         <h3>projet Travel</h3>
                         <p>Application de gestion d'une liste de destinations de voyage dans le cadre d'une courte formation fullstack JS</p>
                         <p>Langages et technologies : vscode ; Node et ExressJS ; HTML et CSS</p>
