--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <img src="assets/pizza.jpeg" alt="image d'une pizza cuite avec plein de fromage" width="400px" height="350px">
                         </a>
                     </div>
-                    <div >
+                    <div class="descr-dte">
                         <h3>La Mamma pizzeria</h3>
                         <p>Petit formulaire réalisé dans le cadre du programme "Freecode Camp"</p>
                         <p>Langages et technologies : vscode ; HTML ; CSS</p>
@@ -62,7 +62,7 @@
                             <img src="assets/pendu.jpg" alt="dessin du jeu du pendu" width="400px" height="350px">
                         </a>
                     </div>
-                    <div>
+                    <div class="descr-dte">
                         <h3>Jeu du pendu</h3>
                         <p>Petit jeu du pendu réalisé lors d'un tutoriel OpenClassrooms</p>
                         <p>Langages et technologies : vscode ; Python</p>
@@ -75,7 +75,7 @@
                             <img src="assets/advent.jpg" alt="calendrier de l'avent avec un sapin" width="400px" height="350px">
                         </a>
                     </div>
-                    <div>
+                    <div class="descr-dte">
                         <h3>Advent of Code 2021</h3>
                         <p>Défi de l'Advent of Code 2021 ; 18 étoiles remportées</p>
                         <p>Langages et technologies : vscode ; Python et Java</p>
@@ -88,7 +88,7 @@
                             <img src="assets/to_do_list.jpg" alt="tableau d'une liste de choses à faire" width="400px" height="350px">
                         </a>
                     </div>
-                    <div>
+                    <div class="descr-dte">
                         <h3>To-do List</h3>
                         <p>Application de gestion d'une liste de tâches, réalisée dans le cadre de cours en java EE en autodidacte</p>
                         <p>Langages et technologies : Eclipse ; Java EE</p>
@@ -101,7 +101,7 @@
                             <img src="assets/cafe.jpg" alt="photo d'une tasse de café" width="400px" height="350px">
                         </a>
                     </div>
-                    <div>
+                    <div class="descr-dte">
                         <h3>Mr Coffee</h3>
                         <p>Design réalisé à partir d'une maquette dans le cadre d'une courte formation fullstack JS</p>
                         <p>Langages et technologies : vscode ; HTML ; CSS</p>
@@ -114,7 +114,7 @@
                             <img src="assets/biblio.jpg" alt="photo d'une bibliothèque" width="400px" height="350px">
                         </a>
                     </div>
-                    <div>
+                    <div class="descr-dte">
                         <h3>Bibliothèque</h3>
                         <p>Application de gestion d'une bibliothèque, réalisée dans le cadre de cours en java EE en autodidacte</p>
                         <p>Ce code me sert de sandbox lorsque j'apprends de nouvelles fonctionnalités en JavaEE - il n'est pas forcément abouti et ne sert pas forcément à évaluer la qualité de mon code.</p>
@@ -128,7 +128,7 @@
                             <img src="assets/CSS_icon.svg" alt="logo CSS" width="400px" height="350px">
                         </a>
                     </div>
-                    <div>
+                    <div class="descr-dte">
                         <h3>Mes projets HTML et CSS</h3>
                         <p>Portfolio réalisé pour l'école la Plateforme à Marseille</p>
                         <p>Langages et technologies : vscode ; HTML ; CSS</p>
@@ -141,7 +141,7 @@
                             <img src="assets/travel.jpg" alt="photo d'une plage au coucher du soleil" width="400px" height="350px">
                         </a>
                     </div>
-                    <div>
+                    <div class="descr-dte">
                         <h3>projet Travel</h3>
                         <p>Application de gestion d'une liste de destinations de voyage dans le cadre d'une courte formation fullstack JS</p>
                         <p>Langages et technologies : vscode ; Node et ExressJS ; HTML et CSS</p>
