just corrected a tyop

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="descr-dte">
                         <h3>projet Travel</h3>
                         <p>Application de gestion d'une liste de destinations de voyage dans le cadre d'une courte formation fullstack JS</p>
-                        <p>Langages et technologies : vscode ; Node et ExressJS ; HTML et CSS</p>
+                        <p>Langages et technologies : vscode ; Node et ExpressJS ; HTML et CSS</p>
                     </div>
                 </div>
 
