--- a/index.html
+++ b/index.html
@@ -25,19 +25,22 @@
                 <img src="./assets/tofs-chats/breading-cats-025.jpg" alt="un chat avac la tete dans un morceau de pain">
             </section>
 
-            <section id="welcome-section" class="welcome left">
-                <h2>A propos de moi</h2>
-                <p>J'ai toujours été intéressée par l'informatique et le numérique, et j'ai enfin décidé de franchir le pas en 2018.</p>
-                <p >Je m'intéresse principalement au développement d'applications et au développement backend, sans me fermer à d'autres domaines.</p>
-                <p>je suis actuellement inscrite en première année à l'école la Plateforme à Marseille</p>
-                <p>Mes compétences actuelles</p>
-                <ul>
-                    <li>Programmation orientée objet ; Java</li>
-                    <li>HTML et CSS</li>
-                    <li>Python</li>
-                    <li>Développement backend et Java EE</li>
-                    <li>Bases de Données Relationnelles et mysql</li>
-                </ul>
+            <section id="welcome-section" class="flex-center">
+                <h2 class="welcome central">A propos de moi</h2>
+                <div class="welcome left">
+                    <p>J'ai toujours été intéressée par l'informatique et le numérique, et j'ai enfin décidé de franchir le pas en 2018.</p>
+                    <p >Je m'intéresse principalement au développement d'applications et au développement backend, sans me fermer à d'autres domaines.</p>
+                    <p>je suis actuellement inscrite en première année à l'école la Plateforme à Marseille</p>
+                    <p>Mes compétences actuelles</p>
+                    <ul>
+                        <li>Programmation orientée objet ; Java</li>
+                        <li>HTML et CSS</li>
+                        <li>Python</li>
+                        <li>Développement backend et Java EE</li>
+                        <li>Bases de Données Relationnelles et mysql</li>
+                    </ul>
+                </div>
+
             </section>
 
             <section id="projects" class="flex-center">
@@ -147,9 +150,7 @@
                         <p>Langages et technologies : vscode ; Node et ExpressJS ; HTML et CSS</p>
                     </div>
                 </div>
-
             </section>
-
         </main>
 
         <footer id="profile">
