--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio personnel</title>
-        <meta name="description" content="Je suis Morgane Rossi et voici mon portfolio réalisé lors de ma formation à l'école la Plateforme à Marseille. Je m'intéresse principalement au développement d'applications et au développement backend, sans me fermer à d'autres domaines. Java ; python ; mysql">
+        <meta name="description" content="Morgane Rossi, développeuse Java et JavaEE. En recherche de contrat de professionnalisation spé développeur de logiciels à l'École la Plateforme, Marseille.">
         <link href="./style.css" rel="stylesheet">
     </head>
 
